--- a/css/styles.css
+++ b/css/styles.css
@@ -14,10 +14,9 @@ body {
   color: #1a1a92;
   font-size: 1.2em; }
 
-/*Colores: CELESTE: 52,196,204; NARANJA: 248,167,24; ROSA: 249,189,215; VERDE: 0,194,1*/
 .logo-principal {
   font-size: 20px;
-  color: #1dd0f8; }
+  color: #34c4cc; }
   .logo-principal img {
     height: 200px;
     width: auto;
@@ -165,7 +164,7 @@ nav {
   .nosotros p {
     font-size: 1.5rem;
     text-align: center;
-    background-color: rgba(249, 189, 215, 0.7);
+    background-color: #f9bdd7;
     padding: 1rem;
     margin: 1rem;
     border-radius: 1rem; }
@@ -243,7 +242,7 @@ nav {
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
-  background-color: #ffb9f2;
+  background-color: #f9bdd7;
   border-radius: 1rem;
   padding: 1rem;
   margin: 1rem; }
@@ -287,40 +286,6 @@ footer {
     height: 100%;
     align-items: center;
     justify-content: space-around; }
-
-@media screen and (max-width: 1100px) {
-  .local img {
-    height: 60vh; }
-  .galeria {
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 250px;
-    margin-top: 5px; }
-  .indu {
-    grid-row-start: span 2; }
-  .foto-4 {
-    grid-column-start: span 3; }
-  .img-pago {
-    width: 90%;
-    margin-top: 2rem; }
-  .contenedor {
-    width: 90%;
-    transform: translateX(10%); }
-  .pago {
-    width: 400px;
-    height: 300px;
-    margin-right: 10px; }
-    .pago p {
-      font-size: 1rem; }
-  .nosotros p {
-    font-size: 1.2rem; }
-  .fotos {
-    width: 100%; }
-    .fotos img {
-      height: 400px;
-      width: auto;
-      transform: translateX(-10); }
-  .contact ul {
-    font-size: 1.2rem; } }
 
 @media screen and (max-width: 970px) {
   #contact-main {
