--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,3 +1,8 @@
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
+
 /* Main de about.html */
 
 .nosotros {
@@ -14,7 +19,7 @@
         font-size: 1.5rem;
         font-weight: bold;
         text-align: center;
-        background-color: rgb(248, 167, 24);
+        background-color: $naranja;
         box-shadow: 7px 7px 19px -4px rgba(0, 0, 0, 0.75);
         -webkit-box-shadow: 7px 7px 19px -4px rgba(0, 0, 0, 0.75);
         -moz-box-shadow: 7px 7px 19px -4px rgba(0, 0, 0, 0.75);
@@ -25,7 +30,7 @@
     p {
         font-size: 1.5rem;
         text-align: center;
-        background-color: rgba(249, 189, 215, 0.7);
+        background-color: $rosa;
         padding: 1rem;
         margin: 1rem;
         border-radius: 1rem;
