--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -1,3 +1,8 @@
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
+
 /* Main de faq.html */
 
 .pregunta {
@@ -12,7 +17,7 @@
         font-size: 1.5rem;
         font-weight: bold;
         text-align: center;
-        background-color: rgb(249, 189, 215);
+        background-color: $rosa;
         border-radius: 1rem;
         padding: 1rem;
         margin: 1rem;
