--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,12 @@
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
+
 /* Footer*/
 
 footer {
-    background-color: rgb(52, 196, 204);
+    background-color: $celeste;
     width: 100%;
     height: 60px;
     color: #000000;
