--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,8 @@
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
+
 * {
     padding: 0;
     margin: 0;
@@ -16,11 +21,9 @@ body {
     font-size: 1.2em;
 }
 
-/*Colores: CELESTE: 52,196,204; NARANJA: 248,167,24; ROSA: 249,189,215; VERDE: 0,194,1*/
-
 .logo-principal {
     font-size: 20px;
-    color: #1dd0f8;
+    color: $celeste;
 
     img {
         height: 200px;
