--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,8 @@
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
+
 /* Main del index */
 
 .local {
@@ -69,6 +74,6 @@
 
 .tabla-talles {
     width: 50%;
-    border: 3px solid rgb(248, 167, 24);
+    border: 3px solid $naranja;
     transform: translateX(50%);
 }
