--- a/scss/_medias.scss
+++ b/scss/_medias.scss
@@ -1,60 +1,7 @@
-@media screen and (max-width: 1100px) {
-    .local img {
-        height: 60vh;
-    }
-
-    .galeria {
-        grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 250px;
-        margin-top: 5px;
-    }
-
-    .indu {
-        grid-row-start: span 2;
-    }
-
-    .foto-4 {
-        grid-column-start: span 3;
-    }
-
-    .img-pago {
-        width: 90%;
-        margin-top: 2rem;
-    }
-
-    .contenedor {
-        width: 90%;
-        transform: translateX(10%);
-    }
-
-    .pago {
-        width: 400px;
-        height: 300px;
-        margin-right: 10px;
-
-        p {
-            font-size: 1rem;
-        }
-    }
-
-    .nosotros p {
-        font-size: 1.2rem;
-    }
-
-    .fotos {
-        width: 100%;
-
-        img {
-            height: 400px;
-            width: auto;
-            transform: translateX(-10);
-        }
-    }
-
-    .contact ul {
-        font-size: 1.2rem;
-    }
-}
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
 
 @media screen and (max-width: 970px) {
     #contact-main {
@@ -108,7 +55,7 @@
             width: 100%;
             height: 150px;
             display: flex;
-            background-color: rgb(52, 196, 204);
+            background-color: $celeste;
             flex-direction: column;
             align-items: flex-end;
         }
