--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,3 +1,8 @@
+$naranja: rgb(248, 167, 24);
+$celeste: rgb(52, 196, 204);
+$rosa: rgb(249,189,215);
+$verde: rgb(0,194,1);
+
 /* Navegador */
 
 nav {
@@ -12,7 +17,7 @@ nav {
         width: 100%;
         height: 100%;
         display: flex;
-        background-color: rgb(52, 196, 204);
+        background-color: $celeste;
         justify-content: space-evenly;
         align-items: center;
         list-style: none;
